editors/tree-sitter/grammar.js
    source_file: ($) => repeat($._item),

    // ----- items ---------------------------------------------------------

    _item: ($) =>
      choice(
        $.import_declaration,
        $.namespace_declaration,
        $.function_definition,
        $.constant_declaration,
        $.struct_declaration,
        $.class_declaration,
        $.enum_declaration,
        $.trait_declaration,
        $.construct_declaration,
        $.family_conformance_declaration,
        $.extend_declaration,
        $.type_alias_declaration,
        $.distinct_declaration,
        $.package_declaration,
        $.macro_declaration,
        $.comptime_macro_declaration,
        $.comptime_function_declaration,
        $.macro_invocation,
      ),

    // `let Name[: T] = value` at module scope: one value computed once for
    // the program. There is no module-scope `var`.
    constant_declaration: ($) =>
      seq(
        'let',
        field('name', $.identifier),
        optional(seq(':', field('type', $._type))),
        '=',
        field('value', $._expression),
      ),

    // `import Module[.Sub…] [as Alias]`. A module name is a name, not a path.
    import_declaration: ($) =>
      seq(
        'import',
        field('module', $.module_path),
        optional(seq('as', field('alias', $.identifier))),
      ),

    module_path: ($) => seq($.identifier, repeat(seq('.', $.identifier))),

    // `namespace A.B.C { let X = … }` — a nested named scope whose members are
    // reached by their dotted path. A segment is an identifier or a numeric
    // token (`GPT.5.6`), and a member is a `let` constant or a nested namespace.
    attribute: ($) =>
      seq(
        '@',
        field('name', choice($.identifier, $.qualified_attribute_name)),
        optional(choice($.attribute_arguments, $.attribute_block)),
      ),

    function_definition: ($) =>
      prec.right(
        seq(
          repeat($.attribute),
          optional('async'),
          'function',
          field('name', $.identifier),
          optional(field('type_parameters', $.type_parameters)),
          field('parameters', $.parameters),
          optional(field('return_type', $.return_type)),
          optional(field('body', $.block)),
        ),
      ),

    parameters: ($) =>
      seq(
        '(',
        optional(
          seq(
            optional(seq($.self_parameter, optional(','))),
            commaSepTrailing($.parameter),
          ),
        ),
        ')',
      ),

    // A method's receiver: `borrow self` or `borrow mut self`. A bare `self` is
    // KPAR075, so it parses here and is refused in the compiler.
    self_parameter: (_$) =>
      seq(optional(seq('borrow', optional('mut'))), 'self'),

    parameter: ($) =>
      seq(
        field('name', $.identifier),
        ':',
        optional(field('ownership', $.ownership_modifier)),
        field('type', $._type),
        optional(seq('=', field('default', $._expression))),
      ),

    ownership_modifier: (_$) =>
      choice(seq('borrow', optional('mut')), 'move', 'copy'),

    // Kira accepts both `-> Type` and `): Type`; a function type result takes
    // the `:` spelling, because `->` would be the function type's own arrow.
    return_type: ($) => seq(choice('->', ':'), $._type),

    // ----- types ---------------------------------------------------------

    _type: ($) =>
      choice(
        $.array_type,
        $.function_type,
        $.existential_type,
        $.generic_type,
        $._type_path,
      ),

    // `some Widget` / `Any Widget`: a value of some declaration backing the
    // family. Bare `Any` is the top type and stays an ordinary type name.
    existential_type: ($) =>
      seq(choice('some', 'Any'), field('family', $._type_path)),

    // `Result<Int, AppError>`. A plain type is its own path node, so a type
    // position that names one carries no wrapper.
    _type_path: ($) =>
      choice($._type_name, $.qualified_type_identifier),

    // The alias gives a type position its own node for highlighting. `Any` is
    // both the top type and the head of the family existential, so it reaches a
    // type name here as well as `existential_type` there.
    type_arguments: ($) => seq('<', commaSep1Trailing($._type), '>'),

    array_type: ($) => seq('[', $._type, ']'),

    struct_declaration: ($) =>
      seq(
        repeat($.attribute),
        'struct',
        field('name', $.identifier),
        optional(field('type_parameters', $.type_parameters)),
        optional(field('conforms', $.conformance_list)),
        field('body', $.struct_body),
      ),

    struct_body: ($) => seq('{', repeat($._aggregate_member), '}'),

    // `class Name[: Trait, …] [extends Parent, …] { <member>* }`. Traits first,
    // parents second.
    class_declaration: ($) =>
      seq(
        repeat($.attribute),
        'class',
        field('name', $.identifier),
        optional(field('type_parameters', $.type_parameters)),
        optional(field('conforms', $.conformance_list)),
        optional(field('extends', $.extends_list)),
        field('body', $.class_body),
      ),

    class_body: ($) =>
      seq(
        '{',
        repeat(choice($._aggregate_member, $.override_member)),
        '}',
      ),

    conformance_list: ($) => seq(':', commaSep1Trailing($._trait_reference)),

    // A conformance may name an ordinary trait or one concrete generic trait
    // instance (`Provider<Int>`). The rule is hidden so the existing tree for
    // an ordinary `: Hashable, Tagged` list stays flat.
    _trait_reference: ($) =>
      seq(
        $._type_path,
        optional($.type_arguments),
      ),

    // A parent may be a concrete generic aggregate (`extends Parent<Value>`).
    // Keep the rule hidden so an ordinary parent remains the same flat
    // `type_identifier` node in the tree.
    extends_list: ($) =>
      seq(
        'extends',
        commaSep1Trailing(seq($._type_path, optional($.type_arguments))),
      ),

    _aggregate_member: ($) => choice($.field_declaration, $.function_definition),

    field_declaration: ($) =>
      seq(
        choice('let', 'var'),
        field('name', $.identifier),
        ':',
        field('type', $._type),
        optional(seq('=', field('default', $._expression))),
      ),

    // `override let rate = 5` rebinds an inherited default; `override function`
    // replaces an inherited method.
    override_member: ($) =>
      seq(
        'override',
        choice(
          $.function_definition,
          seq(
            choice('let', 'var'),
            field('name', $.identifier),
            optional(seq(':', field('type', $._type))),
            '=',
            field('default', $._expression),
          ),
        ),
      ),

    // `enum Name[<A, B>][: Trait, …] { <variant>* }`. Variants are separated by nothing.
    // A parameter may carry trait bounds (`Value: Scored + Send`); the comma
    // separates parameters, so the traits of one parameter's bound join with
    // `+`.
    enum_declaration: ($) =>
      seq(
        repeat($.attribute),
        'enum',
        field('name', $.identifier),
        optional(field('type_parameters', $.type_parameters)),
        optional(field('conforms', $.conformance_list)),
        field('body', $.enum_body),
      ),

    type_parameters: ($) => seq('<', commaSep1Trailing($.type_parameter), '>'),

    type_parameter: ($) =>
      seq(
        field('name', $.identifier),
        optional(seq(':', field('bounds', $.bound_traits))),
      ),

    bound_traits: ($) =>
      seq(
        alias($.identifier, $.type_identifier),
        repeat(seq('+', alias($.identifier, $.type_identifier))),
      ),

    enum_body: ($) => seq('{', repeat($.enum_variant), '}'),

    // `Empty`, `Text(String)`, and `InvalidFormat: String = "…"`.
    enum_variant: ($) =>
      seq(
        field('name', $.identifier),
        optional(
          choice(
            seq('(', field('payload', $._type), ')'),
            seq(
              ':',
              field('payload', $._type),
              optional(seq('=', field('default', $._expression))),
            ),
          ),
        ),
      ),

    // `type Name = Target`.
    type_alias_declaration: ($) =>
      seq('type', field('name', $.identifier), '=', field('target', $._type)),

    // `distinct Name = Representation`. The same shape as an alias and the
    // opposite meaning: an alias is a second spelling for one type, while this
    // is a second type over one representation.
    distinct_declaration: ($) =>
      seq(
        repeat($.attribute),
        'distinct',
        field('name', $.identifier),
        '=',
        field('representation', $._type),
      ),

    // ----- traits --------------------------------------------------------

    // `trait Name { … }`. A member with no body is a requirement; one with a
    // body is a default.
    trait_declaration: ($) =>
      seq(
        'trait',
        field('name', $.identifier),
        optional(field('type_parameters', $.type_parameters)),
        optional(field('conforms', $.conformance_list)),
        field('body', $.trait_body),
      ),

    trait_body: ($) => seq('{', repeat($.function_definition), '}'),

    // `extend Family { … }` is the fluent modifier block; `extend T: Trait { … }`
    // is the impl block.
    construct_declaration: ($) =>
      seq(
        repeat($.attribute),
        'construct',
        field('name', $.identifier),
        optional(field('parameters', $.parameters)),
        optional(field('conforms', $.conformance_list)),
        optional(field('extends', $.extends_list)),
        field('body', $.construct_body),
      ),

    // `Family Name { … }` — the bare head of a zero-parameter declaration
    // backed by `Family`: the family named first, the declaration second, no
    // parameter list and no clauses. Same body, same members.
    family_conformance_declaration: ($) =>
      seq(
        repeat($.attribute),
        field('family', $.identifier),
        field('name', $.identifier),
        field('body', $.construct_body),
      ),

    construct_body: ($) =>
      seq('{', repeat($._construct_member), '}'),

    _construct_member: ($) =>
      choice(
        $.construct_field,
        $.construct_computed_member,
        $.function_definition,
        $.construct_initializer,
        $.requires_section,
        $.lifecycle_section,
        $.construct_member_shorthand,
      ),

    // `let n: Int = 0`, `@Required let title: String`, `@Content let body: Any`.
    construct_field: ($) =>
      seq(
        repeat($.attribute),
        choice('let', 'var'),
        field('name', $.identifier),
        optional(seq(':', field('type', $._type))),
        optional(seq('=', field('default', $._expression))),
      ),

    // `let node: Any { … }` — a zero-argument method read as a property.
    construct_computed_member: ($) =>
      seq(
        repeat($.attribute),
        choice('let', 'var'),
        field('name', $.identifier),
        ':',
        field('type', $._type),
        field('body', $.block),
      ),

    // `render { return content }` — the shorthand for a computed member whose
    // result type the backing family decides.
    construct_member_shorthand: ($) =>
      seq(field('name', $.identifier), field('body', $.block)),

    construct_initializer: ($) =>
      seq('init', field('parameters', $.parameters), field('body', $.block)),

    // `requires { function f(…) -> T … }` — the section spelling of
    // `@Required function`.
    requires_section: ($) =>
      seq('requires', '{', repeat($.function_definition), '}'),

    // `lifecycle { onAppear() { … } }` — the points a runtime drives.
    lifecycle_section: ($) =>
      seq('lifecycle', '{', repeat($.lifecycle_hook), '}'),

    lifecycle_hook: ($) =>
      seq(
        repeat($.attribute),
        field('name', $.identifier),
        field('parameters', $.parameters),
        optional(field('return_type', $.return_type)),
        field('body', $.block),
      ),

    // ----- packages ------------------------------------------------------

    // `Package Name { let version = "0.1.0" … }` in a `package.kira`.
    package_declaration: ($) =>
      seq('Package', field('name', $.identifier), field('body', $.block)),

    // ----- macros --------------------------------------------------------

    // `macro square(value: expr) { expand { … } }` — declarative.
    block: ($) =>
      prec.dynamic(
        1,
        prec(1, seq('{', repeat($._statement), '}')),
      ),

    _statement: ($) =>
      choice(
        $.variable_declaration,
        $.assignment_statement,
        $.return_statement,
        $.if_statement,
        $.while_statement,
        $.for_statement,
        $.break_statement,
        $.continue_statement,
        $.match_statement,
        $.attempt_statement,
        $.expression_statement,
      ),

    variable_declaration: ($) =>
      seq(
        choice('let', 'var'),
        field('name', $.identifier),
        optional(
          seq(
            ':',
            optional(field('ownership', $.ownership_modifier)),
            field('type', $._type),
          ),
        ),
        '=',
        field('value', $._expression),
      ),

    // The target is written with expression syntax (`p`, `p.x`, `xs[i]`);
    // whether it names a place is a question for semantics.
    _assignment_target: ($) =>
      choice($._value_name, $.field_expression, $.index_expression),

    // The value is taken greedily, so `return` NEWLINE `42` returns 42.
    return_statement: ($) =>
      prec.right(seq('return', optional(field('value', $._expression)))),

    expression_statement: ($) => prec(-1, $._expression),

    // ----- expressions ---------------------------------------------------

    _expression: ($) =>
      choice(
        $.conditional_expression,
        $.binary_expression,
        $.type_test_expression,
        $.type_cast_expression,
        $.unary_expression,
        $.ownership_expression,
        $.try_expression,
        $.call_expression,
        $.method_call_expression,
        $.main_thread_operation,
        $.construction_expression,
        $.trailing_closure_expression,
        $.macro_invocation,
        $.quote_block,
        $.field_expression,
        $.index_expression,
        $.closure_expression,
        $.parenthesized_expression,
        $.array_literal,
        $.dot_member_expression,
        $._value_name,
        $.integer_literal,
        $.float_literal,
        $.string_literal,
        $.boolean_literal,
      ),

    // `move` and `copy` are contextual: each is an operator only when an
    // operand follows, and an ordinary name everywhere else.
    binary_expression: ($) => {
      /** @type {[number, RuleOrLiteral][]} */
      const table = [
        [PREC.or, '||'],
        [PREC.and, '&&'],
        [PREC.bitOr, '|'],
        [PREC.bitXor, '^'],
        [PREC.bitAnd, '&'],
        [PREC.equality, choice('==', '!=')],
        [PREC.comparison, choice('<', '<=', '>', '>=')],
        [PREC.shift, choice('<<', '>>')],
        [PREC.additive, choice('+', '-')],
        [PREC.multiplicative, choice('*', '/', '%')],
      ];

      return choice(
        ...table.map(([precedence, operator]) =>
          prec.left(
            precedence,
            seq(
              field('left', $._expression),
              field('operator', operator),
              field('right', $._expression),
            ),
          ),
        ),
      );
    },

    call_expression: ($) =>
      prec(
        PREC.postfix,
        seq(field('function', $._callable), field('arguments', $.arguments)),
      ),

    // The callee is a bare name; `a.b(x)` is a `method_call_expression`.
    _callable: ($) => $._value_name,

    // One rung above the rest of the postfix chain, which is what settles
    // `p.sum()` as a method call rather than a field read that is then called.
