editors/tree-sitter/test/corpus/declarations.txt
================================================================================
Import of a sibling module
================================================================================

import geometry

--------------------------------------------------------------------------------

(source_file
  (import_declaration
    module: (module_path
      (identifier))))

================================================================================
Import of a nested module with an alias
================================================================================

import shapes.Rect as Rect

--------------------------------------------------------------------------------

(source_file
  (import_declaration
    module: (module_path
      (identifier)
      (identifier))
    alias: (identifier)))

================================================================================
Struct with members and a default
================================================================================

struct Box {
    var origin: Vec3
    var label: String = "unnamed"
}

--------------------------------------------------------------------------------

(source_file
  (struct_declaration
    name: (identifier)
    body: (struct_body
      (field_declaration
        name: (identifier)
        type: (type_identifier))
      (field_declaration
        name: (identifier)
        type: (type_identifier)
        default: (string_literal)))))

================================================================================
Struct with a method
================================================================================

struct Mesh {
    let id: Int
    function scaled(factor: Int) -> Int {
        return id * factor
    }
}

--------------------------------------------------------------------------------

(source_file
  (struct_declaration
    name: (identifier)
    body: (struct_body
      (field_declaration
        name: (identifier)
        type: (type_identifier))
      (function_definition
        name: (identifier)
        parameters: (parameters
          (parameter
            name: (identifier)
            type: (type_identifier)))
        return_type: (return_type
          (type_identifier))
        body: (block
          (return_statement
            value: (binary_expression
              left: (identifier)
              right: (identifier))))))))

================================================================================
Class with parents and overrides
================================================================================

class Savings extends Account, Ledger {
    var balance: Int = 100
    override let rate = 5
    override function gross() -> Int {
        return Account.gross()
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    name: (identifier)
    extends: (extends_list
      (type_identifier)
      (type_identifier))
    body: (class_body
      (field_declaration
        name: (identifier)
        type: (type_identifier)
        default: (integer_literal))
      (override_member
        name: (identifier)
        default: (integer_literal))
      (override_member
        (function_definition
          name: (identifier)
          parameters: (parameters)
          return_type: (return_type
            (type_identifier))
          body: (block
            (return_statement
              value: (method_call_expression
                receiver: (identifier)
                method: (identifier)
                arguments: (arguments)))))))))

================================================================================
Enum variants are separated by nothing
================================================================================

enum Color { Red Green Blue }

--------------------------------------------------------------------------------

(source_file
  (enum_declaration
    name: (identifier)
    body: (enum_body
      (enum_variant
        name: (identifier))
      (enum_variant
        name: (identifier))
      (enum_variant
        name: (identifier)))))

================================================================================
Enum payloads, and a payload with a default
================================================================================

enum Message {
    Empty
    Text(String)
    InvalidFormat: String = "not that format"
}

--------------------------------------------------------------------------------

(source_file
  (enum_declaration
    name: (identifier)
    body: (enum_body
      (enum_variant
        name: (identifier))
      (enum_variant
        name: (identifier)
        payload: (type_identifier))
      (enum_variant
        name: (identifier)
        payload: (type_identifier)
        default: (string_literal)))))

================================================================================
A generic enum declaration
================================================================================

enum Result<Value, Failure> {
    Ok(Value)
    Error(Failure)
}

--------------------------------------------------------------------------------

(source_file
  (enum_declaration
    name: (identifier)
    type_parameters: (type_parameters
      (type_parameter
        name: (identifier))
      (type_parameter
        name: (identifier)))
    body: (enum_body
      (enum_variant
        name: (identifier)
        payload: (type_identifier))
      (enum_variant
        name: (identifier)
        payload: (type_identifier)))))

================================================================================
An enum may claim one or more traits
================================================================================

enum Tag: Scored, Displayable { Red Blue }

--------------------------------------------------------------------------------

(source_file
  (enum_declaration
    name: (identifier)
    conforms: (conformance_list
      (type_identifier)
      (type_identifier))
    body: (enum_body
      (enum_variant
        name: (identifier))
      (enum_variant
        name: (identifier)))))

================================================================================
A type parameter may carry trait bounds joined by `+`
================================================================================

enum Boxed<Value: Scored + Send, Rest> {
    Held(Value)
    Rest(Rest)
}

--------------------------------------------------------------------------------

(source_file
  (enum_declaration
    name: (identifier)
    type_parameters: (type_parameters
      (type_parameter
        name: (identifier)
        bounds: (bound_traits
          (type_identifier)
          (type_identifier)))
      (type_parameter
        name: (identifier)))
    body: (enum_body
      (enum_variant
        name: (identifier)
        payload: (type_identifier))
      (enum_variant
        name: (identifier)
        payload: (type_identifier)))))

================================================================================
Generic aggregate declarations and a generic trait reference
================================================================================

trait Provider<Value> {
    function get(borrow self) -> Value
}

struct Box<Value>: Provider<Value> {
    let value: Value
}

class Holder<Value> {
    let value: Value
}

--------------------------------------------------------------------------------

(source_file
  (trait_declaration
    name: (identifier)
    type_parameters: (type_parameters
      (type_parameter
        name: (identifier)))
    body: (trait_body
      (function_definition
        name: (identifier)
        parameters: (parameters
          (self_parameter))
        return_type: (return_type
          (type_identifier)))))
  (struct_declaration
    name: (identifier)
    type_parameters: (type_parameters
      (type_parameter
        name: (identifier)))
    conforms: (conformance_list
      (type_identifier)
      (type_arguments
        (type_identifier)))
    body: (struct_body
      (field_declaration
        name: (identifier)
        type: (type_identifier))))
  (class_declaration
    name: (identifier)
    type_parameters: (type_parameters
      (type_parameter
        name: (identifier)))
    body: (class_body
      (field_declaration
        name: (identifier)
        type: (type_identifier)))))

================================================================================
Type alias
================================================================================

type Byte = U8

--------------------------------------------------------------------------------

(source_file
  (type_alias_declaration
    name: (identifier)
    target: (type_identifier)))

================================================================================
Type alias to an array of an alias
================================================================================

type Matrix = [[Count]]

--------------------------------------------------------------------------------

(source_file
  (type_alias_declaration
    name: (identifier)
    target: (array_type
      (array_type
        (type_identifier)))))

================================================================================
Distinct type over a fixed-width scalar
================================================================================

distinct TabId = U32

--------------------------------------------------------------------------------

(source_file
  (distinct_declaration
    name: (identifier)
    representation: (type_identifier)))

================================================================================
Two distinct types over one representation
================================================================================

distinct TabId = U32
distinct BookmarkId = U32

--------------------------------------------------------------------------------

(source_file
  (distinct_declaration
    name: (identifier)
    representation: (type_identifier))
  (distinct_declaration
    name: (identifier)
    representation: (type_identifier)))

================================================================================
Package declaration
================================================================================

Package KikHarness {
    let version = "0.1.0"
    let kind = .App
}

--------------------------------------------------------------------------------

(source_file
  (package_declaration
    name: (identifier)
    body: (block
      (variable_declaration
        name: (identifier)
        value: (string_literal))
      (variable_declaration
        name: (identifier)
        value: (dot_member_expression
          name: (identifier))))))

================================================================================
Module constant
================================================================================

let answer = 6 * 7

--------------------------------------------------------------------------------

(source_file
  (constant_declaration
    name: (identifier)
    value: (binary_expression
      left: (integer_literal)
      right: (integer_literal))))

================================================================================
Module constant with a type annotation and a call
================================================================================

let greeting: String = audience()

--------------------------------------------------------------------------------

(source_file
  (constant_declaration
    name: (identifier)
    type: (type_identifier)
    value: (call_expression
      function: (identifier)
      arguments: (arguments))))

================================================================================
A generic class extends a concrete generic parent
================================================================================

class Parent<Value> {
    let value: Value
}

class Child<Value> extends Parent<Value> {
    let extra: Int
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    name: (identifier)
    type_parameters: (type_parameters
      (type_parameter
        name: (identifier)))
    body: (class_body
      (field_declaration
        name: (identifier)
        type: (type_identifier))))
  (class_declaration
    name: (identifier)
    type_parameters: (type_parameters
      (type_parameter
        name: (identifier)))
    extends: (extends_list
      (type_identifier)
      (type_arguments
        (type_identifier)))
    body: (class_body
      (field_declaration
        name: (identifier)
        type: (type_identifier)))))
